--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/sprirud
 spring.datasource.username=root
 spring.datasource.password=P@12p98p
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+server.port=8000
+server.tomcat.log-startup-info=true
+server.error.whitelabel.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
